--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.12.11",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -18,6 +19,8 @@
     "nuka-carousel": "^8.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-loading-skeleton": "^3.5.0",
+    "react-masonry-css": "^1.0.16",
     "swiper": "^11.2.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
