--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.4.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.3",
     "nuka-carousel": "^8.2.0",
