--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@apollo/client": "^3.12.11",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
