--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "nuka-carousel": "^8.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "react-loading-skeleton": "^3.5.0",
     "react-masonry-css": "^1.0.16",
     "swiper": "^11.2.1",
