--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -26,9 +28,12 @@
     "nuka-carousel": "^8.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-loading-skeleton": "^3.5.0",
     "react-masonry-css": "^1.0.16",
+    "react-redux": "^9.2.0",
     "swiper": "^11.2.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
