--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.2",
     "lucide-react": "^0.474.0",
+    "mongodb": "^6.14.2",
     "next": "15.1.3",
     "nuka-carousel": "^8.2.0",
     "react": "^19.0.0",
