Update Next.js configuration to include new image domain; add rss-parser package for handling RSS feeds; enhance artwork components with price inquiry functionality and modal integration; update various text references from "Artsy" to "Art Index" for branding consistency.

--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-masonry-css": "^1.0.16",
     "react-redux": "^9.2.0",
+    "rss-parser": "^3.13.0",
     "sonner": "^2.0.1",
     "swiper": "^11.2.1",
     "tailwind-merge": "^3.0.1",
