--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
     "mongodb": "^6.14.2",
     "next": "15.1.3",
