--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
