--- a/client/package.json
+++ b/client/package.json
@@ -41,7 +41,8 @@
     "sonner": "^2.0.1",
     "swiper": "^11.2.1",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
