--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
+    "googleapis": "^150.0.1",
     "helmet": "^8.0.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
@@ -40,10 +41,12 @@
     "passport-jwt": "^4.0.1",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
+    "postmark": "^4.0.5",
     "socket.io": "^4.8.1",
     "stripe": "^17.6.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "eslint": "^9.19.0",
