--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.12",
     "@reduxjs/toolkit": "^2.6.1",
-    "axios": "^1.8.3",
+    "axios": "^1.10.0",
+    "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
