--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "googleapis": "^150.0.1",
     "helmet": "^8.0.0",
