--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-masonry-css": "^1.0.16",
     "react-redux": "^9.2.0",
+    "recharts": "^3.1.0",
     "rss-parser": "^3.13.0",
     "sonner": "^2.0.1",
     "swiper": "^11.2.1",
